# Lenia

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEPENDENCIES.md  Makefile  README.md  architecture.md  build_windows.bat  conanfile.txt  imgui.ini  index.html  setup_libs.ps1  vcpkg.json
Initialisation/: Fish.json
assets/init/: Bosco.npy  Fish.npy  Wanderer.npy
assets/shaders/: analysis.comp  display.frag  display.vert  kernel_gen.comp  sim_multichannel.comp  sim_noise.comp  sim_spatial.comp
docs/: index.html  main.js  style.css  translations.js
src/: AnalysisManager.cpp  AnalysisManager.hpp  Application.cpp  Application.hpp  EmitterPresetData.hpp  KernelManager.cpp  KernelManager.hpp  Lenia.manifest  Lenia.rc  LeniaEngine.cpp  LeniaEngine.hpp  Localization.cpp  Localization.hpp  Main.cpp  PresetData.inc  Presets.cpp  Presets.hpp  Renderer.cpp  Renderer.hpp  SimulationState.cpp  SimulationState.hpp  UIOverlay.cpp  UIOverlay.hpp
src/Utils/: GLUtils.hpp  Logger.hpp  NpyLoader.cpp  NpyLoader.hpp  Shader.cpp  Shader.hpp
